@@ -4,6 +4,7 @@ runtime:
     Carp: 0
     Exporter: 0
     Scalar::Util: 0
+    Sentinel: 0
 test:
   requires:
     Test2::V0: 0
